  invocation (%pydb) and may be useful in other shells as well

* Provide a clue when debugger "run" command given but no "file" has
  been set.

* Better shell-like argument parsing in the "run" command via
  shlex. 

* Recover more gracefully if a post-mortem is called and there is none.

* set_trace is now an alias for debugger which is probably a more natural
  name.

* A number of small bugs fixed and document updates.

1.19 2006-10-27

* info threads: merge in terse display (Python 2.5, threadframe)
  and sort by thread name (Python 2.5)

* Add optional position argument on "continue" command.

* Add pydb.runl() and pydb.runv() forms to facilitate debugging a
  program from inside a Python shell.

* fix thread bugs: on startup with threading we stopped one statement
  too soon. more careful about storing into variables used in
  threading which are not locked (and so could be changed during a
  thread switch)

* Allow quit in thread debugging when MainThread is the only thread
  that we are in

* fix bugs in signal handling. 

* Add "stack" and "nostack" to list of things that can be done when
  a signal is received.

* things to make more ipython friendly.

* Improve pydb manual

1.18 2006-09-25

* Start thread debugging: 
    info thread [thread-name] [terse|verbose]    - show thread info
    qt                                     - quit current thread
    can set a breakpoint on a specific thread name.
  expand definitions of "frame" and "break" for threading

* GDB-like signal handling. Some code based on Matt Fleming's 2006
  Summer-of-Code project. Gdb's "handle" and "signal" commands.

* Add hard kill. May be needed for thread debugging.

* Fix bug in handling temporary breakpoints (tbreak) caused by the
  difference in semantics between pdb's 'clear' command and pdb's
  (which calls this 'delete' and has a different meaning for 'clear').

* 'examine' command now shows object's instance variables.
